[package]
name    = "ratatui-wgpu-ed"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 's'

[dependencies]
anyhow                   = "1.0.93"
console_error_panic_hook = "0.1.7"
console_log              = "1.0.0"
js-sys                   = "0.3.72"
log                      = "0.4.27"
ratatui                  = { version = "0.29.0", default-features = false }
ratatui-wgpu             = { version = "0.3.1", features = [ "web" ] }
unicode-segmentation     = "1.12.0"
unicode-width            = "0.2.0"
wasm-bindgen             = "0.2.95"
wasm-bindgen-futures     = "0.4.45"
web-sys                  = { version = "0.3.72", features = [ "HtmlTextAreaElement" ] }
wgpu                     = "25.0.2"
winit                    = "0.30.11"
